<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_logo"
    tools:context=".HomepageFragment"
    android:padding="16dp">

        <ImageView
            android:id="@+id/content_main_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/img"
            android:src="@drawable/icon_no_background_small"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_main_text_head"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/content_main_text_body"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textColor="@color/white"
            />

</LinearLayout>