<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    >

    <ImageView
        android:id="@+id/custom_dialog_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/img"
        android:background="@drawable/ic_check"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        />

    <TextView
        android:id="@+id/custom_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/validated"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:padding="20dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/buttonCustomDialogAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textSize="15sp"
        android:layout_gravity="center"/>

</LinearLayout>