<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_logo"
    tools:context=".RegisterFragment"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_procedure"
        android:textSize="16sp"
        android:paddingTop="30dp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_user"
        android:textSize="16sp"
        android:paddingTop="30dp"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp">
        <Spinner
            android:id="@+id/users_list_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:minWidth="200dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="60dp"
        >
        <TextView
            android:id="@+id/user_q_value_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_key_uses"
            android:textSize="20sp"
            android:paddingStart="0dp"
            android:textAlignment="center"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            />
        <NumberPicker
            android:id="@+id/user_q_value"
            android:layout_width="30dp"
            android:background="@color/white"
            android:solidColor="#fff"
            android:layout_height="60dp"
            />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continu"
        android:id="@+id/register_new_user"
        android:layout_gravity="center_horizontal" />


</LinearLayout>