<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/blue_logo"
tools:context="./core/administration/AdministrationFragment">

<TabHost android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TabWidget android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:id="@android:id/tabs"/>

        <FrameLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@android:id/tabcontent"
            android:padding="@dimen/activity_margin">

            <LinearLayout android:id="@+id/tab_system"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <!-- Content -->
                <View
                    android:layout_height="3dp"
                    android:layout_width="match_parent"
                    android:background="#e2dddd"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:text="@string/system_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />

                <ImageView
                    android:contentDescription="@string/system_config"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_warning"
                    android:tint="@color/dark_yellow"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:text="@string/new_system_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    />

                <View
                    android:layout_height="2dp"
                    android:layout_width="match_parent"
                    android:background="#e2dddd"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >

                    <TextView
                        android:text="@string/ec_elements"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:text="@string/ec_definition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:textStyle="italic"
                        android:textColor="@color/white"
                        />
                    <TableLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        >
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:layout_weight="4"
                                android:labelFor="@+id/input_ec_field"
                                android:text="@string/field"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:textSize="14sp"
                                android:gravity="center_vertical|end"
                                android:layout_marginEnd="20dp"
                                android:textColor="@color/white"
                                />
                            <EditText
                                android:layout_weight="1"
                                android:id="@+id/input_ec_field"
                                android:layout_width="wrap_content"
                                android:minWidth="100dp"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:inputType="number"
                                android:textAlignment="textEnd"
                                android:textSize="14sp"/>
                        </TableRow>
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:layout_weight="4"
                                android:labelFor="@+id/input_ec_a"
                                android:text="@string/A"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:textSize="14sp"
                                android:gravity="center_vertical|end"
                                android:layout_marginEnd="20dp"
                                android:textColor="@color/white"
                                />
                            <EditText
                                android:layout_weight="1"
                                android:id="@+id/input_ec_a"
                                android:layout_width="wrap_content"
                                android:minWidth="100dp"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:inputType="number"
                                android:textAlignment="textEnd"
                                android:textSize="14sp"/>
                        </TableRow>
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:layout_weight="4"
                                android:labelFor="@+id/input_ec_b"
                                android:text="@string/B"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:textSize="14sp"
                                android:gravity="center_vertical|end"
                                android:layout_marginEnd="20dp"
                                android:textColor="@color/white"
                                />
                            <EditText
                                android:layout_weight="1"
                                android:id="@+id/input_ec_b"
                                android:layout_width="wrap_content"
                                android:minWidth="100dp"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:inputType="number"
                                android:textAlignment="textEnd"
                                android:textSize="14sp"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/ec_create"
                    android:text="@string/create"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout android:id="@+id/tab_db"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <View
                    android:layout_height="3dp"
                    android:layout_width="match_parent"
                    android:background="#e2dddd"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/db"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    />
                <Button
                    android:id="@+id/db_restart_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restart_default_values"
                    android:layout_marginTop="20dp"
                    android:textSize="12sp"/>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</TabHost>
</LinearLayout>