<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ReadNFCFragment"
    android:background="@color/blue_logo">

    <!-- Read NFCT -->
    <TextView
        android:id="@+id/read_nfc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/bring_close_nfc"/>

    <TextView
        android:id="@+id/read_nfc_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:text="@string/active_your_nfc"/>
    <ImageView
        android:id="@+id/read_nfc_stress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/bring_close_nfc"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_apps"
        android:tint="@color/white"
        />

    <!-- Result -->
    <TextView
        android:id="@+id/read_nfc_result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/result"/>

    <TextView
        android:id="@+id/read_nfc_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/material_blue_grey_800"
        android:textSize="12sp"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:textIsSelectable="true"
        android:background="@drawable/cell_shape"
        android:backgroundTint="@color/background_material_light"
        android:gravity="center_horizontal"/>

</LinearLayout>